# Tleco

./: .gitignore  Cargo.toml  README.md  pyproject.toml  readme_updater.py  requirements.txt
.github/workflows/: CI.yml  CI_TEST.yml  CI_TEST2.yml  CI_test.yml  Release.yml
Python/: broken_pwl_law_full_example.py  plots_code.py  test.py
comparisons/: fokker_planck_test.py  ic_bb_test.py  ic_mono_test.py  synchrotron_test.py
comparisons/dependencies/: fp_test.py  radiation_test.py
comparisons/ic_dependencies/: radiation_test.py
examples/: Katarzynski_2006_example.py  broken_pwl_law_full_example.py  kn_cooling_fig2_fig3.py
paramo/: __init__.py  broken_pwl_law_full_example.py
pysrc/: broken_pwl_law_full_example.py  constants.py  misc_func.py  test.py
pysrc/comparisons/: Katarzynski_2006_example.py  ic_bb_test.py  ic_mono_test.py
pysrc/comparisons/compare_data/katarzynski_digitized_plots/: fig1_a  fig1_b  fig1_c  fig2_a  fig2_b  fig2_c  fig3_a  fig3_b  fig3_c  fig4_a  fig4_b  fig4_c
pysrc/comparisons/ic_dependencies/: radiation_test.py
pysrc/examples/: Katarzynski_2006_example.py
pysrc/paramo/: __init__.py  paramo.pyi  plots_code.py
pysrc/paramo/comparisons/: ic_bb_test.py
pysrc/paramo/examples/: Katarzynski_2006_example.py
pysrc/tleco/: __init__.py  conversion_funcs.py  misc_func.py  tleco.pyi
src/: SRtoolkit.rs  constants.rs  distribs.rs  distribs_unfinished  lib.rs  misc.rs  pwl_integ.rs  radiation.rs  specialf.rs  srtoolkit.rs
tests/: test.py  test_distrib.py  test_radiation.py  test_srtoolkit.py
tests/test_dependencies/: radiation_test.py
