[package]
name = "paramo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paramo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
ndarray = {version="0.15.3",  features = ["rayon"]}
scilib = "1.0.0"
num = "0.4.1"
rayon = "1.8.1" # checked
#check versions for all dependencies
