[build-system]
requires = [ "maturin>=1.4,<2.0",]
build-backend = "maturin"

[project]
name = "tleco"
version = "1.0.3"
summary = "Tleco: Tleco stands for both in the fire and rise in the nahuatl language. Tleco is a numerical code that simulates particles in relativistic plasma, and the rise of radiation from accelerating particles."
license = "GPL-3.0-only"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Rust", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy",]
dependencies = [ "astropy >= 6.0.0", "matplotlib >= 3.8.2", "numpy >= 1.26.4", "pytest >= 8.1.1", "toml >= 0.10.2",]
[[project.authors]]
name = "Jesus M Rueda-Becerril"
email = "jm.ruebe@gmail.com"

[[project.authors]]
name = "Zachary Davis"
email = "zachkdavis00@gmail.com"

[tool.maturin]
features = [ "pyo3/extension-module",]
module-name = "tleco"
python-source = "pysrc"

[tool.poetry]
name = "tleco"
version = "1.0.3"
description = "Tleco: Tleco stands for both in the fire and rise in the nahuatl language. Tleco is a numerical code that simulates particles in relativistic plasma, and the rise of radiation from accelerating particles."
authors = [ "Jesus M Rueda-Becerril <jm.ruebe@gmail.com>", "Zachary Davis <zachkdavis00@gmail.com>",]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "6.1.4"
matplotlib = "3.9.2"
numpy = "2.1.2"
pytest = "8.3.3"
toml = "0.10.2"
ebltable = "0.5.2"
tqdm = "4.66.5"
maturin = "1.5"
scipy = "1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests",]
